--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval:     10s # Set the scrape interval to every 1 second.
+  scrape_interval:     10s
 scrape_configs:
   - job_name: 'nodejs'
     honor_labels: true
