--- a/docker-compose.metrics.yml
+++ b/docker-compose.metrics.yml
@@ -19,6 +19,7 @@ services:
       - 3000:3000
     entrypoint: ["/bin/sh"]
     command: ["prod.sh"]
+    restart: always
   db:
     image: postgres
     restart: always
