--- a/docker-compose.metrics_logs_jaeger.yml
+++ b/docker-compose.metrics_logs_jaeger.yml
@@ -21,6 +21,7 @@ services:
       - 3000:3000
     entrypoint: ["/bin/sh"]
     command: ["prod.sh"]
+    restart: always
     logging:
       driver: loki
       options:
